# SoundsOfGuis

./: .clang-format  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  README.md  README.tr.md  conanfile.py  default.nix  flake.nix  test.qml
.github/workflows/: linux_tests.yaml
DefaultConfig_temp/: sog-config.yaml
GuiCollector/: CMakeLists.txt
GuiCollector/Linux/: CMakeLists.txt  LinuxImpl.cpp
GuiCollector/Linux/include/: GuiCollector.hpp  GuiCollector_impl.hpp
GuiCollector/include/: GuiCollector.hpp  IGuiCollector.hpp
GuiCollector/tests/: CMakeLists.txt  GuiCollector_tests.cpp  testing.cpp
POCConfig/: sog-config.toml
SoundCode/: CMakeLists.txt  SoundCode.cpp  _ErrorHelper.hpp  _SoundSource.cpp
SoundCode/impl_include/: _SoundSource.hpp
SoundCode/include/: SoundCode.hpp
SoundCode/include/impl/: _ErrorHelper.hpp  _SoundSource.hpp
SoundCode/tests/: CMakeLists.txt  SoundCode_tests.cpp  _SoundSource_tests.cpp
Utils/: CMakeLists.txt  Terminate_handler.cpp
Utils/include/: ExceptionUtils.hpp  point2.hpp  point3.hpp  static_initilizer.hpp
Utils/tests/: CMakeLists.txt
cmake/: Atspi-2Config.cmake  BoostLinux_libbacktrace.cmake  SndFileConfig.cmake
src/: CMakeLists.txt  sounds-of-gui.desktop.in
src/DefaultConfig/: CMakeLists.txt
src/GuiCollector/: CMakeLists.txt  GetDriver.cpp
src/GuiCollector/Linux/: CMakeLists.txt  GuiCollectorAtSpi2.cpp  GuiElementAtSpi2.cpp  LinuxImpl.cpp
src/GuiCollector/Linux/include/: AtspiMappings.hpp  GuiCollector.hpp  GuiCollectorAtSpi2.hpp  GuiCollectorAtspi2.hpp  GuiElementAtspi2.hpp
src/GuiCollector/include/: GuiCollector.hpp  GuiElement.hpp
src/GuiCollector/tests/: CMakeLists.txt  GuiCollector_tests_base.hpp  element_comparission_test.cpp  element_type_checks_test.cpp  mouse_pos_test.cpp  parent_element_test.cpp  testing.cpp
src/MainLoop/: CMakeLists.txt  GetDirs.cpp  MainLoop.cpp  ParseConfig.cpp  _GetDirs.cpp  _ParseConfig.cpp
src/MainLoop/include/: MainLoop.hpp  ParseConfig.hpp  _GetDirs.hpp  _ParseConfig.hpp
src/MainLoop/tests/: CMakeLists.txt  GetDirs_tests.cpp  ParseConfig_tests.cpp  _GetDirs_tests.cpp  _ParseConfig_tests.cpp  config_loader_tests.cpp
src/MainLoop/tests/test_metarial/: sog-config.toml  sog-config.yaml
src/SoundCode/: CMakeLists.txt  SoundCode.cpp  _SoundSource.cpp
src/SoundCode/include/: SoundCode.hpp
src/SoundCode/include/impl/: _SoundSource.hpp
src/SoundCode/tests/: CMakeLists.txt  SoundCode_tests.cpp  _SoundSource_tests.cpp
src/UserInterface/: CMakeLists.txt  Main.cpp
src/UserInterface/QtUi/: CMakeLists.txt  QtUiController.cpp
src/UserInterface/QtUi/include/: QtUiController.hpp
src/Utils/: CMakeLists.txt  Terminate_handler.cpp
src/Utils/include/: ExceptionUtils.hpp  MapUtils.hpp  defs.h  element_info.hpp  element_type.hpp  point2.hpp  point3.hpp  static_initilizer.hpp
src/Utils/tests/: CMakeLists.txt  ExceptionUtils_tests.cpp  point3_tests.cpp
src/cmake/: AtkMMConfig.cmake  Atspi-2Config.cmake  Gobject-2Config.cmake  SndFileConfig.cmake  libbacktrace_hackConfig.cmake  libxdoConfig.cmake  xcbConfig.cmake
test/: test.cpp
